unpackaged/main/default/objects/SDOC__SDTemplate__c/fields/SDOC__Save_Data__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Save_Data__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Save Data</label>
    <type>Checkbox</type>
</CustomField>