unpackaged/main/default/objects/SDOC__SDTemplate__c/fields/SDOC__SD_K__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SD_K__c</fullName>
    <label>SD_K</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>