unpackaged/main/default/objects/SDOC__SDTemplate__c/fields/SDOC__Show_Warning_Messages__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Show_Warning_Messages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Warning Messages</label>
    <type>Checkbox</type>
</CustomField>