unpackaged/main/default/objects/SDOC__SDTemplate__c/fields/SDOC__SSign_Hide_Logo__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SSign_Hide_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S-Sign Hide Logo</label>
    <type>Checkbox</type>
</CustomField>