unpackaged/main/default/objects/SDOC__SDTemplate__c/fields/SDOC__Tags__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Tags__c</fullName>
    <label>Tags</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>