unpackaged/main/default/objects/SDOC__SDTemplate__c/fields/SDOC__Task_Auto_Create__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Task_Auto_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Auto Create</label>
    <type>Checkbox</type>
</CustomField>