unpackaged/main/default/objects/SDOC__SDTemplate__c/fields/SDOC__Task_Auto_Create_Default__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Task_Auto_Create_Default__c</fullName>
    <description>Controls auto-task creation defaults</description>
    <inlineHelpText>Use this field to control if you want a task to be auto-created, required, or if user needs to opt-in to create a task.</inlineHelpText>
    <label>Task Auto Create Default</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checked1</fullName>
                <label>Checked, user can Uncheck to prevent Task Creation</label>
            </value>
            <value>
                <fullName>Checked2</fullName>
                <label>Checked, User cannot uncheck</label>
            </value>
            <value>
                <fullName>Unchecked</fullName>
                <label>Unchecked, user can Check to Auto-Create a task</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>