unpackaged/main/default/objects/SDOC__SDTemplate__c/fields/SDOC__Task_Details_Override__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Task_Details_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows User to edit the details of a follow up task when a document is generated</description>
    <inlineHelpText>Check if you want a User to edit the details of the follow up task whenever a document is generated</inlineHelpText>
    <label>Task_Details_Override</label>
    <type>Checkbox</type>
</CustomField>