unpackaged/main/default/objects/SDOC__SDTemplate__c/fields/SDOC__Task_Due_Add_Business_Only__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Task_Due_Add_Business_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Due Add Business Only</label>
    <type>Checkbox</type>
</CustomField>