unpackaged/main/default/objects/SDOC__SDTemplate__c/fields/SDOC__Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Task_Subject__c</fullName>
    <label>Task Subject</label>
    <type>TextArea</type>
</CustomField>