unpackaged/main/default/objects/SDOC__SDTemplate__c/fields/SDOC__Template_XML3__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Template_XML3__c</fullName>
    <label>TemplateXML3</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>