unpackaged/main/default/objects/SDOC__SDTemplate__c/fields/SDOC__Unicode_Level__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Unicode_Level__c</fullName>
    <label>Unicode Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Strict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>