unpackaged/main/default/objects/SDOC__SDTemplate__c/fields/SDOC__Version_History_Keep_Limit__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Version_History_Keep_Limit__c</fullName>
    <description>Limits the number of versions to keep in the &#39;Version History&#39; related list.</description>
    <inlineHelpText>Limits the number of versions to keep in the &#39;Version History&#39; related list.</inlineHelpText>
    <label>Version History Keep Limit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disable Version History</fullName>
                <default>true</default>
                <label>Disable Version History</label>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>